# mash

./: .gitignore  CMakeLists.txt  README.md  cd.cpp  commands.cpp  commands.h  echo.cpp  ls.cpp  main.cpp  mash-error.cpp  mash-error.h  mf.cpp  permit.cpp  ping.cpp
file-ops/: md.cpp  mf.cpp  permit.cpp  rd.cpp  rf.cpp
src/: echo.cpp  ls.cpp  main.cpp  md.cpp  mf.cpp  permit.cpp  ping.cpp  rd.cpp  rf.cpp
